Final component Bubble

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
 @import "./style/layout/header";
 @import "./style/layout/gridManager";
 @import "./style/layout/animatedBackground";
+@import "./style/components/boxSettings";
 @import "./style/components/buttons";
 @import "./style/components/rollingIcon";
 @import "./style/components/contactForm";
